temporary hack to fix asset-rack ordering

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,7 @@
         </a>
       </footer>
       <%- assets.templateLibrary() %>
+      <%- assets.tag('/assets/js/zepto.js') %>
       <%- assets.js() %>
     </body>
 </html>
